SP3 (refactor): function names and getuserAccounts
