# api-spring/src/main/java/com/finankal/api/controller/UserController.java
@@ -1,5 +1,6 @@
 package com.finankal.api.controller;
 
+import com.finankal.api.dto.AccountDto;
 import com.finankal.api.service.UserService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -8,6 +9,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigDecimal;
+import java.util.List;
 import java.util.UUID;
 
 @RestController
@@ -18,6 +20,15 @@ public class UserController {
 
     @Autowired
     private UserService userService;
+
+    @GetMapping("/{userId}/accounts")
+    public ResponseEntity<List<AccountDto>> getUserAccounts(
+            @PathVariable UUID userId
+    ) {
+        return ResponseEntity.ok(
+                userService.getUserAccounts(userId)
+        );
+    }
 
     @GetMapping("/{id}/total-credit")
     public ResponseEntity<BigDecimal> getUserTotalCredit(@PathVariable UUID id) {
@@ -35,11 +46,11 @@ public class UserController {
         return ResponseEntity.ok(total);
     }
 
-    @GetMapping("/{id}/total-balance")
-    public ResponseEntity<BigDecimal> getUserTotalBalance(@PathVariable UUID id) {
-        logger.info("Fetching total balance for user: {}", id);
-        BigDecimal total = userService.getUserTotalBalance(id.toString());
-        logger.info("Successfully fetched total balance for user: {} - Total: {}", id, total);
+    @GetMapping("/{id}/net-worth")
+    public ResponseEntity<BigDecimal> getUserNetWorth(@PathVariable UUID id) {
+        logger.info("Fetching net worth for user: {}", id);
+        BigDecimal total = userService.getUserNetWorth(id.toString());
+        logger.info("Successfully fetched net worth for user: {} - Total: {}", id, total);
         return ResponseEntity.ok(total);
     }
 }
